--- a/front/css/style.css
+++ b/front/css/style.css
@@ -305,6 +305,7 @@ article > div > div.price > p {
     }
     p {
         font-family: 'Source Sans 3', sans-serif;
+        font-size: 22px;
     }
     input, label, button {
         font-family: 'Source Sans 3', sans-serif;
@@ -357,10 +358,14 @@ article > div > div.price > p {
     h3 {
         font-family: 'Rum Raisin';
         font-weight: 300;
-        font-size: 24px;
+        font-size: 32px;
     }
     p, label, button {
         font-family: 'Source Sans 3', sans-serif;
+        font-size: 22px;
+    }
+    input {
+        font-size: 22px;
     }
 }
 
@@ -374,6 +379,15 @@ article > div > div.price > p {
         font-family: 'Rum Raisin';
         font-weight: 400;
         font-size: 36px;
+        margin-bottom: 0;
+        display: flex;
+        justify-content: end;
+    }
+    p{
+        margin-top: 0;
+        display: flex;
+        justify-content: end;
+        font-size: 22px;
     }
 }
 
@@ -382,8 +396,96 @@ article > div > div.price > p {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 50px;
+    input {
+        height: 50px;
+    }
+    label {
+        font-size: 22px;
+    }
 }
+
+.cart-form-input input::placeholder {
+    font-size: 18px;
+}
+
 .cart-form-input-list {
     display: flex;
     flex-direction: column;
+}
+
+.cart-buy-button {
+    display: flex;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: auto;
+    margin-top: 100px;
+    color: #FFF;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 900;
+    background: #EE7F43;
+    padding: 12px 57px;
+    cursor: pointer;
+    border: 0;
+
+}
+
+
+/* MODAL La commande a été passée avec succés. */
+
+/* Modal Header */
+#myModal {
+    display: none;
+}
+
+.modal {
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+ }
+
+.modal-header {
+    padding: 20px;
+    h2 {
+        font-family: 'Source Sans 3', sans-serif;
+        font-size: 36px;
+        text-align: center;
+    } 
+    span {
+        font-size: 45px;
+    }
+}
+
+/* Modal Body */
+.modal-body {
+    padding: 50px 100px;
+    p {
+        font-family: 'Source Sans 3', sans-serif;
+        font-size: 22px;
+    }
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
+/* Add Animation */
+@keyframes animatetop {
+  from {top: -300px; opacity: 0}
+  to {top: 0; opacity: 1}
 }
